--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,22 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: 5%;
+  margin-right: 5%;
+  height: 100vh; /* Full viewport height */
+  overflow: hidden; /* Hide overflow */
+}
+.main-content {
+  flex-grow: 1; /* Fill remaining space */
+  overflow-y: auto; /* Allow vertical scrolling within main content if needed */
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
 }
 
 .App-link {
