FetchQuery method added and product along with the categories are retirved from the server using React Fetch

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,12 @@
 .App {
   text-align: center;
   background-color: rgb(255, 255, 255);
-    height: 100vh; /* Full viewport height */
-    overflow: hidden; 
-    /* pointer-events:unset; */
-    /* cursor:crosshair; */
+  height: 100vh; /* Full viewport height */
 }
 
 .Cart.toggled {
     position: fixed;
-    top: 7%;
+    top: 7% + 10'px' ;
     left: 0;
     width: 100%;
     height: 100%;
@@ -27,7 +24,7 @@
 .cart-products {
 
   position: fixed; /* Make the widget pop up without affecting layout */
-  top: 7%; /* Adjust as needed */
+  top: 7% ; /* Adjust as needed */
   right: 20px; /* Adjust as needed */
   z-index: 1100; /* Ensure it is on top of other elements */
   background-color: #fff; /* Add a background color */
@@ -41,10 +38,10 @@
 }
 
 
-.App.toggled img.grayscale-img {
+/* .App.toggled img.grayscale-img {
     filter: grayscale(100%);
     background-color: transparent;
-}
+} */
 
 .App-logo {
   height: 40vmin;
@@ -81,19 +78,27 @@
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
+.navbar{
 
+  margin-top: 10px
+}
 
 .image-wrapper img {
   width: 100%;
   height: 100%;
   object-fit: contain ; /* Ensures the image covers the entire wrapper without distortion */
+  justify-content:flex-start;
+  /* background-color: rgb(248, 246, 246); */
 }
 .navbar .nav-item.selected .nav-link {
     color: rgb(103, 216, 103); /* Change this to your desired color */
     /* font-family: sans-serif; */
     
 }
-
+a {
+color: inherit; /* blue colors for links too */
+text-decoration: inherit; /* no underline */
+}
 img {
     position: relative;
     pointer-events: none;
@@ -108,22 +113,28 @@ img {
     line-height: 100%;
     padding: 1rem;
 }
+.card-set{
+  overflow-x: auto; 
+
+}
 
 .card {
   caret-color: transparent;
   background-color: inherit;
   border: none;
   max-width: 50vh ;
+
 }
 .card-body {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  
 }
 
 .nav-item.selected{
-    border-bottom: 2px solid rgb(103, 216, 103);
+    border-bottom: 3px solid rgb(103, 216, 103);
     color:  #e5e6e6;
 }
 
@@ -133,12 +144,10 @@ img {
   flex-direction: column;
   margin-left: 5%;
   margin-right: 5%;
+  font-family: 'Raleway'
 
 }
-/* .img-fluid {
-  max-width: 100%;
-  height: auto;
-} */
+
 
 .App-link {
   color: #61dafb;
