--- a/src/App.css
+++ b/src/App.css
@@ -21,15 +21,10 @@
 
 .cart-products {
   position: fixed;
-  /* Make the widget pop up without affecting layout */
   top: 7%;
-  /* Adjust as needed */
   right: 20px;
-  /* Adjust as needed */
   z-index: 1100;
-  /* Ensure it is on top of other elements */
   background-color: #fff;
-  /* Add a background color */
   width: 300px;
 }
 
@@ -38,11 +33,6 @@
   padding: 0.5em 0.6em;
   transform: translate(-50%, -50%);
 }
-
-/* .App.toggled img.grayscale-img {
-    filter: grayscale(100%);
-    background-color: transparent;
-} */
 
 .App-logo {
   height: 40vmin;
@@ -103,36 +93,76 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
-/* .navbar {
-  margin-top: 10px;
-} */
+.slider-img{
+
+  height: 500px;
+  width: auto;
+  object-fit: fill;
+
+}
+
+.gallery{
+
+  display: flex;
+  flex-direction: column;
+  max-height: 500px;
+  object-fit: contain;
+    caret-color: transparent;
+
+}
+.gallery img{
+  padding-bottom: 10px;
+  height: auto;
+  max-height: 20%;
+  width: auto;
+  object-fit: contain;
+  overflow: hidden;
+}
+.product-info{
+  display: flex;
+  flex-direction: column;
+  justify-content:baseline;
+  align-items: flex-start;
+  height: 100%;
+
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+
+.details{
+  
+  margin-left: auto;
+}
+
+.cart-btn {
+  /* margin: 10px; */
+  margin: 50px;
+}
+
 
 .image-wrapper img {
   width: 100%;
   height: 100%;
-  /* Ensures the image covers the entire wrapper without distortion */
+
   justify-content: flex-start;
   object-fit: fill;
 }
 
 .navbar .nav-item.selected .nav-link {
   color: rgb(103, 216, 103);
-  /* Change this to your desired color */
-  /* font-family: sans-serif; */
+
 }
 
 a {
   color: inherit;
-  /* blue colors for links too */
   text-decoration: inherit;
-  /* no underline */
 }
 
 img {
   position: relative;
   pointer-events: none;
   z-index: 1;
-  /* Ensure images are behind overlay */
 }
 
 .navbar .nav-item .nav-link {
@@ -159,11 +189,28 @@ img {
   max-width: 50vh;
 }
 
+
+
 .card-body {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+
+.items{
+  align-items: start;
+  justify-content: space-between
+}
+
+.item-border {
+  list-style: none;
+  border: 1px solid #000000;
+  width: auto;
+  border-radius: 8px;
+  margin: 10px;
+
 }
 
 .nav-item.selected {
