--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   top: 7%;
   right: 20px;
   z-index: 1100;
-  height: 500px;
+  max-height: 500px;
   overflow: auto;
   background-color: #fff;
   width: 360px;
